examples/negative/effects_phase2/args_helper_no_row.kai
# Negative fixture (#537 / effects phase 2): bare prelude
# `args()` raises `Env` on the caller's row per
# docs/effects-stdlib.md §`Env` (the op is declared on the
# `Env` effect; the bare-prelude form is sugar for
# `Env.args()`). A helper that calls `args()` bare without
# declaring `/ Env` must be rejected by the typer.
#
# `main`'s REmpty row still absorbs `Env`, so this fixture
# anchors the contract in a non-main helper where the enforcement
# is visible.

fn first_arg() : [String] = args()

fn main() : Int = {
  let _ = first_arg()
  0
}
